<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/soundtrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naruto_sound_tracks"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/sasuke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sasuke"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundtrack" />

    <Button
        android:id="@+id/madara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/madara"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/obito"
        app:layout_constraintEnd_toStartOf="@+id/obito"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/obito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="228dp"
        android:text="@string/obito"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pain"
        app:layout_constraintStart_toEndOf="@+id/madara" />

    <Button
        android:id="@+id/pain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/pain"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/obito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/obito" />

    <Button
        android:id="@+id/naruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/naruto"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sasuke"
        app:layout_constraintStart_toStartOf="@+id/sasuke" />

    <Button
        android:id="@+id/sasuke_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sasuke_introduction"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/naruto"
        app:layout_constraintStart_toStartOf="@+id/naruto"
        app:layout_constraintTop_toBottomOf="@+id/naruto" />

</androidx.constraintlayout.widget.ConstraintLayout>